--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,12 +1,20 @@
 server {
-  listen 80;
+  server_tokens off;
 
+  location = /api {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/api/;
+  }
 
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
   }
-
+  
+  location = /admin {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/admin/;
+  }
 
   location /admin/ {
     proxy_set_header Host $http_host;
@@ -17,5 +25,6 @@ server {
   location / {
     alias /staticfiles/;
     index index.html;
+    try_files $uri $uri/ index.html =404;
   }
 }
